--- a/test2.html
+++ b/test2.html
@@ -34,6 +34,12 @@
             left: 100px; 
             background-color: rgba(221,35,255,1); 
         }
+        .silex-id-1474998701656-1 {
+            min-height: 252px; 
+            width: 416px; 
+            top: 167px; 
+            left: 241px; 
+        }
         .silex-id-1442914589168-2 {
             min-height: 50px; 
             width: 400px; 
@@ -50,7 +56,7 @@
     </style>
 
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgb(38, 38, 38)"},"background-initial":{"background-color":"rgb(255, 255, 255)","top":"5px","left":"154px","width":"960px","min-height":"600px"},"silex-id-1442914589168-2":{"min-height":"50px","width":"400px","top":"635px","left":"6px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"28px","width":"250px","top":"13px","left":"80px"},"silex-id-1474997958570-0":{"min-height":"100px","width":"100px","top":"100px","left":"100px","background-color":"rgba(255,255,255,1)"}},"mobile":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgb(38, 38, 38)"},"background-initial":{"background-color":"rgb(255, 255, 255)","top":"5px","left":"154px","width":"960px","min-height":"600px"},"silex-id-1442914589168-2":{"min-height":"50px","width":"400px","top":"635px","left":"6px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"28px","width":"250px","top":"13px","left":"80px"},"silex-id-1474997958570-0":{"min-height":"100px","width":"100px","top":"100px","left":"100px","background-color":"rgba(221,35,255,1)"},"silex-id-1474998701656-1":{"min-height":"252px","width":"416px","top":"236px","left":"191px"}},"mobile":{}}]
     </script>
     <title></title>
     <style id="current-page-style">
@@ -72,6 +78,7 @@
         <div data-silex-type="text" class="editable-style silex-id-1474997958570-0 text-element" data-silex-id="silex-id-1474997958570-0">
             <div class="silex-element-content normal">New text box</div>
         </div>
+        <div data-silex-type="image" class="editable-style silex-id-1474998701656-1 image-element" data-silex-id="silex-id-1474998701656-1" style=""><img src="images.duckduckgo.com.jpeg" class="silex-element-content"></div>
     </div>
     <div data-silex-id="silex-id-1442914589168-2" class="editable-style silex-id-1442914589168-2 container-element background" data-silex-type="container" style="">
         <div data-silex-id="silex-id-1442914737143-3" class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text">
