--- a/test2.html
+++ b/test2.html
@@ -30,8 +30,8 @@
         .silex-id-1474997958570-0 {
             min-height: 100px; 
             width: 100px; 
-            top: 100px; 
-            left: 100px; 
+            top: 29px; 
+            left: 90px; 
             background-color: rgba(221,35,255,1); 
         }
         .silex-id-1474998701656-1 {
@@ -39,6 +39,20 @@
             width: 416px; 
             top: 167px; 
             left: 241px; 
+        }
+        .silex-id-1474998971063-2 {
+            min-height: 100px; 
+            width: 100px; 
+            top: 30px; 
+            left: 227px; 
+            background-color: rgba(35,255,244,1); 
+        }
+        .silex-id-1474999059834-3 {
+            min-height: 100px; 
+            width: 100px; 
+            top: 24px; 
+            left: 395px; 
+            background-color: rgb(255, 255, 255); 
         }
         .silex-id-1442914589168-2 {
             min-height: 50px; 
@@ -56,7 +70,7 @@
     </style>
 
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgb(38, 38, 38)"},"background-initial":{"background-color":"rgb(255, 255, 255)","top":"5px","left":"154px","width":"960px","min-height":"600px"},"silex-id-1442914589168-2":{"min-height":"50px","width":"400px","top":"635px","left":"6px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"28px","width":"250px","top":"13px","left":"80px"},"silex-id-1474997958570-0":{"min-height":"100px","width":"100px","top":"100px","left":"100px","background-color":"rgba(221,35,255,1)"},"silex-id-1474998701656-1":{"min-height":"252px","width":"416px","top":"236px","left":"191px"}},"mobile":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgb(38, 38, 38)"},"background-initial":{"background-color":"rgb(255, 255, 255)","top":"5px","left":"154px","width":"960px","min-height":"600px"},"silex-id-1442914589168-2":{"min-height":"50px","width":"400px","top":"635px","left":"6px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"28px","width":"250px","top":"13px","left":"80px"},"silex-id-1474997958570-0":{"min-height":"100px","width":"100px","top":"29px","left":"90px","background-color":"rgba(221,35,255,1)"},"silex-id-1474998701656-1":{"min-height":"252px","width":"416px","top":"167px","left":"241px"},"silex-id-1474998971063-2":{"min-height":"100px","width":"100px","top":"30px","left":"227px","background-color":"rgba(35,255,244,1)"},"silex-id-1474999059834-3":{"min-height":"100px","width":"100px","top":"100px","left":"100px","background-color":"rgb(255, 255, 255)"}},"mobile":{}}]
     </script>
     <title></title>
     <style id="current-page-style">
@@ -75,10 +89,16 @@
 
         <a id="page-page-1" data-silex-type="page" class="page-element page-link-active">Page 1</a></div>
     <div data-silex-id="background-initial" class="background background-initial editable-style container-element prevent-draggable" data-silex-type="container" style="">
-        <div data-silex-type="text" class="editable-style silex-id-1474997958570-0 text-element" data-silex-id="silex-id-1474997958570-0">
+        <div data-silex-type="text" class="editable-style silex-id-1474997958570-0 text-element" data-silex-id="silex-id-1474997958570-0" style="">
             <div class="silex-element-content normal">New text box</div>
         </div>
         <div data-silex-type="image" class="editable-style silex-id-1474998701656-1 image-element" data-silex-id="silex-id-1474998701656-1" style=""><img src="images.duckduckgo.com.jpeg" class="silex-element-content"></div>
+        <div data-silex-type="text" class="editable-style silex-id-1474998971063-2 text-element" data-silex-id="silex-id-1474998971063-2" style="">
+            <div class="silex-element-content normal">
+                <div style="text-align: center;"><span style="background-color: rgb(255, 255, 255);">New text box</span></div>
+            </div>
+        </div>
+        <div data-silex-type="container" class="editable-style silex-id-1474999059834-3 container-element" data-silex-id="silex-id-1474999059834-3" style=""></div>
     </div>
     <div data-silex-id="silex-id-1442914589168-2" class="editable-style silex-id-1442914589168-2 container-element background" data-silex-type="container" style="">
         <div data-silex-id="silex-id-1442914737143-3" class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text">
