--- a/test2.html
+++ b/test2.html
@@ -27,18 +27,6 @@
             width: 960px; 
             min-height: 587px; 
         }
-        .silex-id-1474999434611-7 {
-            min-height: 620px; 
-            width: 545px; 
-            top: -19px; 
-            left: -2px; 
-        }
-        .silex-id-1474999491804-8 {
-            min-height: 25px; 
-            width: 213px; 
-            top: 34px; 
-            left: 634px; 
-        }
         .silex-id-1474999541993-9 {
             min-height: 22px; 
             width: 212px; 
@@ -64,6 +52,12 @@
             top: 481px; 
             left: 634px; 
         }
+        .silex-id-1475000265188-14 {
+            min-height: 388px; 
+            width: 545px; 
+            top: 87px; 
+            left: 22px; 
+        }
         .silex-id-1442914589168-2 {
             min-height: 50px; 
             width: 400px; 
@@ -80,7 +74,7 @@
     </style>
 
     <script type="text/javascript" class="silex-json-styles">
-        [{"desktop":{"body-initial":{"background-color":"rgb(38, 38, 38)"},"background-initial":{"background-color":"rgb(255, 255, 255)","top":"5px","left":"12px","width":"960px","min-height":"587px"},"silex-id-1442914589168-2":{"min-height":"50px","width":"400px","top":"635px","left":"6px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"28px","width":"250px","top":"13px","left":"80px"},"silex-id-1474997958570-0":{"min-height":"100px","width":"100px","top":"32px","left":"222px","background-color":"rgba(221,35,255,1)"},"silex-id-1474998701656-1":{"min-height":"252px","width":"416px","top":"184px","left":"223px"},"silex-id-1474998971063-2":{"min-height":"100px","width":"100px","top":"31px","left":"387px","background-color":"rgba(35,255,244,1)"},"silex-id-1474999059834-3":{"min-height":"100px","width":"100px","top":"34px","left":"540px","background-color":"rgba(77,75,228,0.4666666666666667)"},"silex-id-1474999331308-4":{"min-height":"388px","width":"545px","top":"100px","left":"100px"},"silex-id-1474999342597-5":{"min-height":"100px","width":"100px","top":"100px","left":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474999369836-6":{"min-height":"388px","width":"545px","top":"100px","left":"100px"},"silex-id-1474999434611-7":{"min-height":"620px","width":"545px","top":"-19px","left":"-2px"},"silex-id-1474999491804-8":{"min-height":"25px","width":"213px","top":"34px","left":"634px"},"silex-id-1474999541993-9":{"min-height":"22px","width":"212px","top":"68px","left":"629px"},"silex-id-1474999633535-10":{"min-height":"32px","width":"221px","top":"153px","left":"649px","background-color":"rgb(255, 255, 255)"},"silex-id-1474999708003-11":{"min-height":"34px","width":"203px","top":"97px","left":"625px","background-color":"rgba(119,255,255,1)"},"silex-id-1474999834521-12":{"min-height":"343px","width":"350px","top":"158px","left":"583px"},"silex-id-1475000032272-13":{"min-height":"98px","width":"213px","top":"374px","left":"506px"}},"mobile":{}}]
+        [{"desktop":{"body-initial":{"background-color":"rgb(38, 38, 38)"},"background-initial":{"background-color":"rgb(255, 255, 255)","top":"5px","left":"12px","width":"960px","min-height":"587px"},"silex-id-1442914589168-2":{"min-height":"50px","width":"400px","top":"635px","left":"6px","background-color":"transparent"},"silex-id-1442914737143-3":{"min-height":"28px","width":"250px","top":"13px","left":"80px"},"silex-id-1474997958570-0":{"min-height":"100px","width":"100px","top":"32px","left":"222px","background-color":"rgba(221,35,255,1)"},"silex-id-1474998701656-1":{"min-height":"252px","width":"416px","top":"184px","left":"223px"},"silex-id-1474998971063-2":{"min-height":"100px","width":"100px","top":"31px","left":"387px","background-color":"rgba(35,255,244,1)"},"silex-id-1474999059834-3":{"min-height":"100px","width":"100px","top":"34px","left":"540px","background-color":"rgba(77,75,228,0.4666666666666667)"},"silex-id-1474999331308-4":{"min-height":"388px","width":"545px","top":"100px","left":"100px"},"silex-id-1474999342597-5":{"min-height":"100px","width":"100px","top":"100px","left":"100px","background-color":"rgb(255, 255, 255)"},"silex-id-1474999369836-6":{"min-height":"388px","width":"545px","top":"100px","left":"100px"},"silex-id-1474999434611-7":{"min-height":"620px","width":"545px","top":"-19px","left":"-2px"},"silex-id-1474999491804-8":{"min-height":"25px","width":"213px","top":"34px","left":"634px"},"silex-id-1474999541993-9":{"min-height":"22px","width":"212px","top":"68px","left":"629px"},"silex-id-1474999633535-10":{"min-height":"32px","width":"221px","top":"153px","left":"649px","background-color":"rgb(255, 255, 255)"},"silex-id-1474999708003-11":{"min-height":"34px","width":"203px","top":"97px","left":"625px","background-color":"rgba(119,255,255,1)"},"silex-id-1474999834521-12":{"min-height":"343px","width":"350px","top":"158px","left":"583px"},"silex-id-1475000032272-13":{"min-height":"98px","width":"213px","top":"481px","left":"634px"},"silex-id-1475000265188-14":{"min-height":"388px","width":"545px","top":"100px","left":"100px"}},"mobile":{}}]
     </script>
     <title></title>
 
@@ -105,12 +99,8 @@
 
         <a id="page-page-1" data-silex-type="page" class="page-element page-link-active">Page 1</a></div>
     <div data-silex-id="background-initial" class="background background-initial editable-style container-element prevent-draggable" data-silex-type="container" style="">
-        <div data-silex-type="image" class="editable-style silex-id-1474999434611-7 image-element" data-silex-id="silex-id-1474999434611-7" style=""><img src="mw.jpeg" class="silex-element-content"></div>
-        <div data-silex-type="text" class="editable-style silex-id-1474999491804-8 text-element" data-silex-id="silex-id-1474999491804-8" style="">
-            <div class="silex-element-content normal"><b>Mélanie WALTER</b>
-                <br>
-            </div>
-        </div>
+
+
         <div data-silex-type="text" class="editable-style silex-id-1474999541993-9 text-element" data-silex-id="silex-id-1474999541993-9" style="">
             <div class="silex-element-content normal"><b><span style="background-color: rgb(0, 0, 255);"><span style="background-color: rgb(255, 255, 255);"><span style="color: rgb(0, 0, 255);">Chef de projet Web</span></span> </span></b>
                 <br>
@@ -131,6 +121,7 @@
             </div>
         </div>
         <div data-silex-type="image" class="editable-style silex-id-1475000032272-13 image-element" data-silex-id="silex-id-1475000032272-13" style=""><img src="RS.png" class="silex-element-content"></div>
+        <div data-silex-type="image" class="editable-style silex-id-1475000265188-14 image-element" data-silex-id="silex-id-1475000265188-14" style=""><img src="images.duckduckgo.com.jpeg" class="silex-element-content"></div>
     </div>
     <div data-silex-id="silex-id-1442914589168-2" class="editable-style silex-id-1442914589168-2 container-element background" data-silex-type="container" style="">
         <div data-silex-id="silex-id-1442914737143-3" class="editable-style silex-id-1442914737143-3 text-element" data-silex-type="text">
